expected/main/gens/primNZBitDiv-neg-64.err
ERROR: "actual/main/gens/primNZBitDiv-neg-64.lc", line 3
external div0  {primNZBitDiv  0} :: Bit  0 -> NZBit  0 -> Bit  0
         ^
No generated implementation: parameter 0 is too low; must be at least 2

ERROR: "actual/main/gens/primNZBitDiv-neg-64.lc", line 4
external div1  {primNZBitDiv  1} :: Bit  1 -> NZBit  1 -> Bit  1
         ^
No generated implementation: parameter 1 is too low; must be at least 2

ERROR: "actual/main/gens/primNZBitDiv-neg-64.lc", line 5
external div65 {primNZBitDiv 65} :: Bit 65 -> NZBit 65 -> Bit 65
         ^
No generated implementation: bit vector of width 65 does not fit in a single word

ERROR: "actual/main/gens/primNZBitDiv-neg-64.lc", line 6
external div1K {primNZBitDiv 1K} :: Bit 1K -> NZBit 1K -> Bit 1K
         ^
No generated implementation: parameter 1024 is too large; must be less than 1000

ERROR: Aborting after 4 previously reported errors

